--- a/vignettes/plot_examples.Rmd
+++ b/vignettes/plot_examples.Rmd
@@ -6,27 +6,22 @@ output:
 ---
 
 
-```{r}
-library(devtools)
-library(here)
-#reticulate::use_condaenv("TIRTLtools")
-#load_all(here())
+```{r message=FALSE,warning=FALSE}
 library(TIRTLtools)
 library(magrittr)
 library(dplyr)
-library(ggplot2)
 ```
 
-```{r}
-#download_dataset("SJTRC_TIRTLseq_minimal")
-folder = system.file("extdata/SJTRC_TIRTLseq_minimal", package = "TIRTLtools")
-sjtrc = load_tirtlseq(folder)
+```{r message=FALSE}
+folder = download_dataset("SJTRC_TIRTLseq_minimal", folder = tempdir())
+#folder = system.file("extdata/SJTRC_TIRTLseq_minimal", package = "TIRTLtools")
+sjtrc = load_tirtlseq(folder, compress_strings = FALSE)
 sjtrc = TIRTL_process(sjtrc, clean = FALSE)
 ```
 
 ```{r}
-top_clones1 = sjtrc$data$cd8_tp1_v2$beta %>% arrange(desc(readFraction)) %>% head(5) %>% extract2("targetSequences")
-top_clones2 = sjtrc$data$cd8_tp2_v2$beta %>% arrange(desc(readFraction)) %>% head(5) %>% extract2("targetSequences")
+top_clones1 = sjtrc$data$cd8_tp1_v2$beta %>% arrange(desc(readFraction)) %>% head(5) %>% extract2("targetSequences") %>% as.character()
+top_clones2 = sjtrc$data$cd8_tp2_v2$beta %>% arrange(desc(readFraction)) %>% head(5) %>% extract2("targetSequences") %>% as.character()
 
 plot_clone_size_across_samples(sjtrc, clones = c(top_clones1, top_clones2), chain = "beta")
 ```
