--- a/vignettes/scTIRTLseq_data.Rmd
+++ b/vignettes/scTIRTLseq_data.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "(coming soon) Working with single-cell TIRTLseq data"
+title: "Working with single-cell TIRTLseq data"
 output: html_notebook
 ---
-
+<span class="label label-info">Coming Soon!</span>
 (coming soon)
